--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-feedparser 
-openai 
-keyring 
-windows-curses 
-packaging 
-requests
-pygooglenews
-newspaper4k
-lxml_html_clean
+feedparser==6.0.11
+openai==1.57.2
+keyring==25.5.0
+windows-curses==2.4.0
+packaging==24.2
+requests==2.32.3
+pygooglenews==0.1.3
+newspaper4k==0.9.3.1
+lxml_html_clean==0.4.1
